Copied many changes from central

--- a/es-CL/dom/chrome/layout/css.properties
+++ b/es-CL/dom/chrome/layout/css.properties
@@ -10,10 +10,10 @@ PEDeclDropped = Declaración rechazada.
 PEDeclSkipped = Ignorado hasta la siguiente declaración.
 PEUnknownProperty = Propiedad desconocida '%1$S'.
 PEValueParsingError = Error al interpretar el valor para '%1$S'.
-PEExpectEndValue = Se esperaba el final del valor pero se encontró '%1$S'.
-PERuleTrailing=Se esperaba fin de regla pero se encontró '%1$S'.
-PESkipAtRuleEOF2=fin de regla at
-PEUnknownAtRule = No se reconoce la regla at o error al leer regla at '%1$S'.
+PEExpectEndValue = Se esperaba el final del valor, pero se encontró '%1$S'.
+PERuleTrailing=Se esperaba el fin de la regla, pero se encontró '%1$S'.
+PESkipAtRuleEOF2= fin de regla en
+PEUnknownAtRule = No se reconoce la regla at o error al leer regla en '%1$S'.
 PECharsetRuleEOF = cadena de caracteres en regla @charset
 PECharsetRuleNotString = Se esperaba cadena de caracteres, pero se encontró '%1$S'.
 PEGatherMediaEOF = fin de la lista de medios en regla @import o @media
@@ -28,7 +28,7 @@ PEImportUnexpected = Se encontró un inesperado '%1$S' dentro de @import.
 PEGroupRuleEOF2 = final de regla @media, @supports o @-moz-document
 PEGroupRuleNestedAtRule = Regla %1$S no permitida dentro de @media o @-moz-document.
 PEMozDocRuleBadFunc2=Se esperaba url(), url-prefix(), domain() o regexp() en regla @-moz-document, pero se encontró '%1$S'.
-PEMozDocRuleNotURI = Se esperaba URI en regla @-moz-document, pero se encontró '%1$S'.
+PEMozDocRuleNotURI = Se esperaba una URI en regla @-moz-document, pero se encontró '%1$S'.
 PEMozDocRuleNotString = Cadena esperada en regla @-moz-document en función regexp() pero se econtró '%1$S'.
 PEMozDocRuleEOF = próxima URI en regla @-moz-document
 PEAtNSPrefixEOF = prefijo de espacio de nombre en regla @namespace
@@ -43,40 +43,41 @@ PEBadSelectorRSIgnored = Juego de reglas ignoradas debido a un mal selector.
 PEBadSelectorKeyframeRuleIgnored = Regla keyframe ignorada debido a un selector erróneo.
 PESelectorListExtraEOF = ',' o '{'
 PESelectorListExtra = Se esperó ',' o '{' pero se encontró '%1$S'.
-PESelectorGroupNoSelector = Se espera selector.
+PESelectorGroupNoSelector = Se esperaba un selector.
 PESelectorGroupExtraCombinator = Combinador balanceante.
-PECounterStyleNotIdent=Se esperaba identificador para nombre de la regla @counter-style.
+PECounterStyleNotIdent=Se esperaba un identificador para nombre de la regla @counter-style.
 PECounterStyleBadName=El nombre de la regla @counter-style no puede ser '%1$S'.
-PECounterStyleBadBlockStart=Se esperaba '{' para empezar la regla @counter-style, pero se encontró '%1$S'.
+PECounterStyleBadBlockStart=Se esperaba un '{' para empezar la regla @counter-style, pero se encontró '%1$S'.
 PECounterStyleEOF='}' de cierre del bloque @counter-style
-PECounterDescExpected=Se esperaba descriptor de conteo, pero se encontró '%1$S'.
+PECounterDescExpected=Se esperaba un descriptor de conteo, pero se encontró '%1$S'.
 PEUnknownCounterDesc=Descriptor desconocido '%1$S' en regla @counter-style.
-PECounterExtendsNotIdent=Se esperaba identificador para extends system, pero se encontró '%1$S'.
+PECounterExtendsNotIdent=Se esperaba un identificador para extends system, pero se encontró '%1$S'.
 PECounterASWeight=Cada peso en el descriptor de símbolos aditivos debe ser menor que el peso anterior.
 PEClassSelEOF = nombre de clase
-PEClassSelNotIdent = Se esperó identificador del selector de clase pero se encontró '%1$S'.
+PEClassSelNotIdent = Se esperaba un identificador del selector de clase, pero se encontró '%1$S'.
+PECoordinatePair=Se esperaba un par de coordenadas, pero se encontró '%1$S'.
 PETypeSelEOF = tipo de elemento
-PETypeSelNotType = Se esperó nombre de elemento o '*' pero se encontró '%1$S'.
+PETypeSelNotType = Se esperaba un nombre de elemento o '*', pero se encontró '%1$S'.
 PEUnknownNamespacePrefix = Prefijo de espacio de nombre desconocido '%1$S'.
 PEAttributeNameEOF = nombre de atributo
-PEAttributeNameExpected = Se esperó identificador del nombre de atributo pero se encontró '%1$S'.
-PEAttributeNameOrNamespaceExpected = Se esperó nombre de atributo o espacio de nombre pero se encontró '%1$S'.
-PEAttSelNoBar = Se esperó '|' pero se encontró '%1$S'.
+PEAttributeNameExpected = Se esperaba un identificador del nombre de atributo, pero se encontró '%1$S'.
+PEAttributeNameOrNamespaceExpected = Se esperaba un nombre de atributo o espacio de nombre, pero se encontró '%1$S'.
+PEAttSelNoBar = Se esperaba un '|', pero se encontró '%1$S'.
 PEAttSelInnerEOF = parte de selector de atributo
 PEAttSelUnexpected = Token inesperado en selector de atributo: '%1$S'.
 PEAttSelValueEOF = valor de atributo
 PEAttSelCloseEOF = ']' para finalizar selector de atributo
-PEAttSelNoClose = Se esperó ']' para finalizar el selector de atributo pero se encontró '%1$S'.
-PEAttSelBadValue = Se esperó identificador o cadena para el valor en selector de atributo pero se encontró '%1$S'.
+PEAttSelNoClose = Se esperaba un ']' para finalizar el selector de atributo, pero se encontró '%1$S'.
+PEAttSelBadValue = Se esperaba un identificador o cadena para el valor en selector de atributo, pero se encontró '%1$S'.
 PEPseudoSelEOF = nombre de la pseudo-clase o pseudo-elemento
-PEPseudoSelBadName = Se esperó identificador de pseudo-clase o pseudo-elemento pero se encontró '%1$S'.
+PEPseudoSelBadName = Se esperaba un identificador de pseudo-clase o pseudo-elemento, pero se encontró '%1$S'.
 PEPseudoSelNonFunc = Token de función pseudo-clase o pseudo-elemento que no es función, o de la otra forma, al leer '%1$S'.
-PEPseudoSelNotPE = Se esperó pseudo-elemento pero se encontró '%1$S'.
+PEPseudoSelNotPE = Se esperaba un pseudo-elemento, pero se encontró '%1$S'.
 PEPseudoSelDoubleNot = La pseudo-clase de negación no se puede negar '%1$S'.
 PEPseudoSelPEInNot = Pseudo-elementos no pueden ser negados '%1$S'.
 PEPseudoSelNewStyleOnly = Este pseudo-elemento debe usar la forma "::": '%1$S'.
-PEPseudoSelEndOrUserActionPC=Se esperaba fin del selector o una acción de usuario pseudo-clase después del pseudo elemento pero se encontró '%1$S'.
-PEPseudoSelNoUserActionPC=Se esperaba fin del selector después de pseudo-elemento que no soporta acción de usuario pseudo-clases pero se encontró '%1$S'.
+PEPseudoSelEndOrUserActionPC=Se esperaba el fin del selector o una acción de usuario pseudo-clase después del pseudo elemento, pero se encontró '%1$S'.
+PEPseudoSelNoUserActionPC=Se esperaba el fin del selector después de pseudo-elemento que no soporta acción de usuario pseudo-clases, pero se encontró '%1$S'.
 PEPseudoSelMultiplePE = Pseudo-elemento extra '%1$S'.
 PEPseudoSelUnknown = Pseudo-clase o pseudo-elemento desconocido '%1$S'.
 PENegationEOF = selector dentro de negación
@@ -84,73 +85,73 @@ PENegationBadInner = Selector simple mal formado como argumento de negación de 
 PENegationNoClose = ')' de cierre faltante en pseudo-clase de negación '%1$S'.
 PENegationBadArg = Falta argumento en pseudo-clase de negación '%1$S'.
 PEPseudoClassArgEOF = argumento a selector de pseudo-clase
-PEPseudoClassArgNotIdent = Se esperó identificador del parámetro de la pseudo-clase pero se encontró '%1$S'.
+PEPseudoClassArgNotIdent = Se esperaba un identificador del parámetro de la pseudo-clase, pero se encontró '%1$S'.
 PEPseudoClassArgNotNth = Se esperaba parte del argumento a una pseudo-clase, pero se encontró '%1$S'.
 PEPseudoClassNoClose = Falta ')' de cierre en pseudo-clase, se ha encontrado '%1$S' en su lugar.
 PEPseudoClassNoArg = Falta argumento en pseudo-clase '%1$S'.
-PEPseudoClassNotUserAction=Se esperaba fin del selector o una acción de usuario pseudo-clase después del pseudo-elemento pero se encontró la pseudo-clase '%1$S'.
+PEPseudoClassNotUserAction=Se esperaba el fin del selector o una acción de usuario pseudo-clase después del pseudo-elemento, pero se encontró la pseudo-clase '%1$S'.
 PESelectorEOF = selector
-PEBadDeclBlockStart = Se esperó '{' para iniciar el bloque de declaración pero se encontró '%1$S'.
+PEBadDeclBlockStart = Se esperaba un '{' para iniciar el bloque de declaración, pero se encontró '%1$S'.
 PEColorEOF = color
-PEColorNotColor = Se esperó color pero se encontró '%1$S'.
+PEColorNotColor = Se esperaba un color, pero se encontró '%1$S'.
 PEColorComponentEOF = componente de color
-PEExpectedPercent = Se esperó un porcentaje pero se encontró '%1$S'.
-PEExpectedInt = Se esperó un entero pero se encontró '%1$S'.
-PEColorBadRGBContents = Se esperó número o porcentaje en rgb() pero se encontró '%1$S'.
-PEColorComponentBadTerm = S esperó '%2$S' pero se encontró '%1$S'.
+PEExpectedPercent = Se esperaba un porcentaje, pero se encontró '%1$S'.
+PEExpectedInt = Se esperaba un entero, pero se encontró '%1$S'.
+PEColorBadRGBContents = Se esperaba un número o porcentaje en rgb(), pero se encontró '%1$S'.
+PEColorComponentBadTerm = Se esperaba un '%2$S', pero se encontró '%1$S'.
 PEColorHueEOF = tinte
-PEExpectedComma = Se esperó ',' pero se encontró '%1$S'.
+PEExpectedComma = Se esperaba un ',' pero se encontró '%1$S'.
 PEColorSaturationEOF = saturación
 PEColorLightnessEOF = luminosidad
 PEColorOpacityEOF = opacidad en valor de color
-PEExpectedNumber = Se esperó un numero pero se encontró '%1$S'.
-PEExpectedCloseParen = Se esperó ')' pero se encontró '%1$S'.
+PEExpectedNumber = Se esperaba un numero, pero se encontró '%1$S'.
+PEExpectedCloseParen = Se esperaba un ')', pero se encontró '%1$S'.
 PEDeclEndEOF = ';' o '}' para finalizar declaración
-PEParseDeclarationNoColon = Se esperó ':' pero se encontró '%1$S'.
-PEParseDeclarationDeclExpected = Se esperó declaración pero se encontró '%1$S'.
+PEParseDeclarationNoColon = Se esperaba un ':', pero se encontró '%1$S'.
+PEParseDeclarationDeclExpected = Se esperaba una declaración, pero se encontró '%1$S'.
 PEEndOfDeclEOF = fin de la declaración
 PEImportantEOF = importante
 PEExpectedImportant = Se esperaba 'importante', pero se encontró '%1$S'.
 PEBadDeclEnd = Se esperó ';' para terminar la declaración pero se encontró '%1$S'.
-PEBadDeclOrRuleEnd2 = Se esperó ';' o '}' para terminar la declaración pero se encontró '%1$S'.
+PEBadDeclOrRuleEnd2 = Se esperaba un ';' o '}' para terminar la declaración, pero se encontró '%1$S'.
 PEInaccessibleProperty2 = No se puede especificar el valor para propiedad interna.
 PECommentEOF = fin de comentario
 SEUnterminatedString = Se encontró una cadena sin cerrar '%1$S'.
-PEFontDescExpected = Se esperaba descriptor de tipografía pero se encontró '%1$S'.
+PEFontDescExpected = Se esperaba un descriptor de tipografía, pero se encontró '%1$S'.
 PEUnknownFontDesc = Descriptor desconocido  '%1$S' en la regla @font-face.
-PEMQExpectedExpressionStart = Se esperaba '(' para comenzar expresión de consulta de medios pero se encontró '%1$S'.
+PEMQExpectedExpressionStart = Se esperaba un '(' para comenzar expresión de consulta de medios, pero se encontró '%1$S'.
 PEMQExpressionEOF = contenidos de la expresión de selectores de medios
 PEMQExpectedFeatureName = Se esperaba un nombre de una característica de medios, pero se encontró '%1$S'.
 PEMQExpectedFeatureNameEnd = Se esperaba ':' o ')' después de un nombre de característica de medios, pero se encontró '%1$S'.
 PEMQNoMinMaxWithoutValue = Las características de medios con min- o max- deben tener un valor.
 PEMQExpectedFeatureValue = Se encontró un valor no válido para característica de medios.
-PEBadFontBlockStart = Se esperaba '{' para comenzar la regla @font-face pero se encontró '%1$S'.
-PEBadFontBlockEnd = Se esperaba '}' para finalizar la regla @font-face pero se encontró '%1$S'.
+PEBadFontBlockStart = Se esperaba un '{' para comenzar la regla @font-face, pero se encontró '%1$S'.
+PEBadFontBlockEnd = Se esperaba un '}' para finalizar la regla @font-face, pero se encontró '%1$S'.
 PEAnonBoxNotAlone = No se esperaba una caja anónima.
 PEFFVUnexpectedEOF=Final inesperado de la regla @font-feature-values.
-PEFFVBlockStart=Se esperaba apertura { de la regla @font-feature-values pero se encontro '%1$S'.
-PEFFVValueSetStart=Se esperaba apertura { del valor de característica pero se encontró '%1$S'.
-PEFFVNoFamily=Se esperaba una lista de familia de fuentes para la regla @font-feature-values pero se encontró '%1$S'.
-PEFFVUnexpectedBlockEnd=Se esperaba '}' para finalizar la regla @font-feature-values pero se encontró '%1$S'.
+PEFFVBlockStart=Se esperaba una apertura { de la regla @font-feature-values, pero se encontro '%1$S'.
+PEFFVValueSetStart=Se esperaba una apertura { del valor de característica, pero se encontró '%1$S'.
+PEFFVNoFamily=Se esperaba una lista de familia de fuentes para la regla @font-feature-values, pero se encontró '%1$S'.
+PEFFVUnexpectedBlockEnd=Se esperaba un '}' para finalizar la regla @font-feature-values, pero se encontró '%1$S'.
 PEFFVUnknownFontVariantPropValue=Valor de propiedad font-variant property inesperado '%1$S'.
-PEFFVExpectedIdent=Se esperaba identificador pero se encontró '%1$S'.
-PEFFVExpectedValue=Se esperaba un valor entero no negativo pero se encontró '%1$S'.
+PEFFVExpectedIdent=Se esperaba un identificador, pero se encontró '%1$S'.
+PEFFVExpectedValue=Se esperaba un valor entero no negativo, pero se encontró '%1$S'.
 PEFFVTooManyValues=Demasiados valores para el tipo de característica '%1$S'.
 PEFFVGenericInFamilyList=La lista de familia no puede contener un nomnbre de familia de fuentes genérico.
 PEFFVValueDefinitionTrailing=Se esperaba el final de la definición de valor pero se encontró '%1$S'.
-PEBadDirValue = Se esperaba 'ltr' o 'rlt' en el selector de dirección pero se encontró '%1$S'.
+PEBadDirValue = Se esperaba un 'ltr' o 'rlt' en el selector de dirección, pero se encontró '%1$S'.
 PESupportsConditionStartEOF2='not', '(', o función
 PESupportsConditionInParensEOF=')'
 PESupportsConditionNotEOF = 'not'
 PESupportsWhitespaceRequired=Se esperaba un espacio en blanco después de 'not', 'and', u 'or'.
-PESupportsConditionExpectedOpenParenOrFunction=Se esperaba '(' o función durante el análisis de la condición supports pero se encontró '%1$S'.
-PESupportsConditionExpectedCloseParen = Se esperaba ')' durante el análisis de la condición supports pero se encontró '%1$S'.
-PESupportsConditionExpectedStart2=Se esperaba 'not', '(' o función durante el análisis de la condición supports pero se encontró '%1$S'.
-PESupportsConditionExpectedNot = Se esperaba 'not' durante el análisis de la condición supports pero se encontró '%1$S'.
-PESupportsGroupRuleStart = Se esperaba '{' para comenzar la regla @supports pero se encontró '%1$S'.
+PESupportsConditionExpectedOpenParenOrFunction=Se esperaba un '(' o función durante el análisis de la condición supports, pero se encontró '%1$S'.
+PESupportsConditionExpectedCloseParen = Se esperaba un ')' durante el análisis de la condición supports, pero se encontró '%1$S'.
+PESupportsConditionExpectedStart2=Se esperaba un 'not', '(' o función durante el análisis de la condición supports, pero se encontró '%1$S'.
+PESupportsConditionExpectedNot = Se esperaba un 'not' durante el análisis de la condición supports, pero se encontró '%1$S'.
+PESupportsGroupRuleStart = Se esperaba un '{' para comenzar la regla @supports, pero se encontró '%1$S'.
 PEFilterEOF=filtro
-PEExpectedNoneOrURL=Se esperaba 'none' o URL pero se encontró '%1$S'.
-PEExpectedNoneOrURLOrFilterFunction=Se esperaba 'none', URL, o una función de filtro pero se encontró '%1$S'.
+PEExpectedNoneOrURL=Se esperaba un 'none' o URL, pero se encontró '%1$S'.
+PEExpectedNoneOrURLOrFilterFunction=Se esperaba un 'none', URL, o una función de filtro, pero se encontró '%1$S'.
 PEExpectedNonnegativeNP=Se esperaba un número no negativo o porcentaje.
 PEFilterFunctionArgumentsParsingError=Error al pasar argumentos para la función de filtro.
 PEVariableEOF=variable
@@ -161,6 +162,6 @@ PEValueWithVariablesFallbackInitial=Regresando a 'initial'.
 PEInvalidVariableReference=La propiedad contenía una referencia a una variable inválida.
 PEInvalidVariableTokenFallback=Se encontró un símbolo inválido '%1$S' en el nivel superior de la referencia de regreso de la variable.
 PEExpectedVariableNameEOF=identificador para nombre de variable
-PEExpectedVariableName=Se esperaba identificador para nombre de variable pero se encontró '%1$S'.
-PEExpectedVariableFallback=Se esperaba referencia de regreso de variable después de ','.
-PEExpectedVariableCommaOrCloseParen=Se esperaba ',' o ')' después del nombre de variable en la referencia de variable pero se encontró '%1$S'.
+PEExpectedVariableName=Se esperaba un identificador para nombre de variable, pero se encontró '%1$S'.
+PEExpectedVariableFallback=Se esperaba una referencia de regreso de variable después de ','.
+PEExpectedVariableCommaOrCloseParen=Se esperaba un ',' o ')' después del nombre de variable en la referencia de variable, pero se encontró '%1$S'.
