--- a/es-CL/netwerk/necko.properties
+++ b/es-CL/netwerk/necko.properties
@@ -13,7 +13,7 @@
 5=Enviando petición a %1$S…
 6=Transfiriendo datos desde %1$S…
 7=Conectando a %1$S…
-8=Leido %1$S 
+8=Leído %1$S 
 9=Escrito %1$S
 10=Esperando a %1$S…
 11=Encontrado %1$S…
@@ -37,3 +37,5 @@ PhishingAuth=Está a punto de visitar "%1$S". Este sitio puede estar intentando 
 PhishingAuthAccept=Entiendo y seré muy cuidadoso
 SuperfluousAuth=Está a punto de iniciar sesión en el sitio "%1$S" con el nombre de usuario "%2$S", pero el sitio web no requiere identificación. Esto puede ser un intento de engañarle.\n\n¿Es "%1$S" el sitio que quiere visitar?
 AutomaticAuth=Está a punto de ingresar al sitio "%1$S" con el nombre de usuario "%2$S".
+
+TrackingUriBlocked=El recurso en "%1$S" fue bloqueado porque la protección de seguimiento está activa.
