--- a/es-CL/dom/chrome/security/security.properties
+++ b/es-CL/dom/chrome/security/security.properties
@@ -4,8 +4,10 @@ BlockMixedDisplayContent = Se ha bloqueado la carga del contenido visual mixto "
 BlockMixedActiveContent = Se ha bloqueado la carga del contenido activo mixto "%1$S"
 CrossSiteRequestBlocked=Solicitud de origen cruzado denegada: La misma política de origen no permite la lectura de la fuente remota en %1$S. Esto puede ser solucionado moviendo el recurso al mismo dominio o activando CORS.
 InvalidSTSHeaders=El sitio especificó una cabecera de Strict-Transport-Security inválida.
+InvalidPKPHeaders=El sitio especificó una cabecera Public-Key-Pins inválida.
 InsecurePasswordsPresentOnPage=Campos de contraseña presentes en una página insegura (http://). Este es un riesgo de seguridad que permite el robo de las credenciales de inicio de sesión del usuario.
 InsecureFormActionPasswordsPresent=Campos de contraseña presentes en un formulario con una acción de formulario insegura (http://). Este es un riesgo de seguridad que permite el robo de las credenciales de inicio de sesión del usuario.
 InsecurePasswordsPresentOnIframe=Campos de contraseña presentes en un iframe inseguro (http://). Este es un riesgo de seguridad que permite el robo de las credenciales de inicio de sesión del usuario.
 LoadingMixedActiveContent=Cargando contenido activo mixto (inseguro) en una página segura "%1$S"
 LoadingMixedDisplayContent=Cargando contenido de muestra mixto (inseguro) en una página segura "%1$S"
+BothAllowScriptsAndSameOriginPresent=Un iframe que tiene tanto allow-scripts como allow-same-origin para su atributo de caja de arena, puede remover su caja de arena.
