New strings in dom, toolkit, security

--- a/da/dom/chrome/accessibility/AccessFu.properties
+++ b/da/dom/chrome/accessibility/AccessFu.properties
@@ -156,6 +156,7 @@ statePressed     =    trykket
 stateExpanded    =    udvidet
 stateCollapsed   =    sammenfoldet
 stateUnavailable =    ikke tilgængelig
+stateReadonly    =    ikke skrivbar
 stateRequired    =    påkrævet
 stateTraversed   =    besøgt
 stateHasPopup    =    har pop op
