--- a/da/dom/chrome/security/security.properties
+++ b/da/dom/chrome/security/security.properties
@@ -8,8 +8,12 @@ CrossSiteRequestBlocked=Forespørgsel til fremmed websted blokeret. Politikken f
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Webstedet angav en ugyldig Strict-Transport-Security-header.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders=Webstedet angav en ugyldig Public-Key-Pins-header.
 InsecurePasswordsPresentOnPage=Login-felterne er placeret på en usikker side (http://). Dette udgør en sikkerhedsrisiko, da det er muligt at stjæle dine login-koder.
 InsecureFormActionPasswordsPresent=Login-felterne er placeret i en usikker formular (http://). Dette udgør en sikkerhedsrisiko, da det er muligt at stjæle dine login-koder.
 InsecurePasswordsPresentOnIframe=Login-felterne er placeret i en usikker iframe (http://).  Dette udgør en sikkerhedsrisiko, da det er muligt at stjæle dine login-koder.
 LoadingMixedActiveContent=Indlæser blandet (usikkert) indhold på en sikker side "%1$S"
 LoadingMixedDisplayContent=Indlæser blandet (usikkert) indhold på en sikker side "%1$S"
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=En iframe som både indeholder allow-scripts og allow-same-origin i sin sandbox-attribut kan deaktivere dens sandboxning.
