--- a/da/netwerk/necko.properties
+++ b/da/netwerk/necko.properties
@@ -37,3 +37,5 @@ PhishingAuth=Du er ved at besøge "%1$S." Dette websted forsøger muligvis at sn
 PhishingAuthAccept=Jeg er indforstået og vil være meget forsigtig
 SuperfluousAuth=Du er ved at logge ind på websted "%1$S" med brugernavnet "%2$S," men webstedet kræver ikke godkendelse. Dette kan være et forsøg på at snyde dig.\n\nEr "%1$S" siden du ønsker at besøge?
 AutomaticAuth=Du er ved at logge ind på webstedet "%1$S" med brugernavnet "%2$S."
+
+TrackingUriBlocked=Ressourcen på "%1$S" blev blokeret, fordi beskyttelse mod sporing er aktiveret.
