--- a/da/security/manager/chrome/pipnss/nsserrors.properties
+++ b/da/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,18 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL modtog ugyldige NPN-data.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=SSL-funktionen understøtter ikke SSL 2.0-forbindelser.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=SSL-funktionen understøtter ikke servere.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=SSL-funktionen understøtter ikke klienter.
+SSL_ERROR_INVALID_VERSION_RANGE=SSL-versionsspændet er ikke gyldigt.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=SSL peer selected a cipher suite disallowed for the selected protocol version.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL modtog et forkert udformet Hello Verify Request-handshake.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL modtog en uventet Hello Verify Request-handshake-meddelelse.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=SSL-funktionen er ikke understøttet i denne protokolversion.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL modtog en uventet Certificate Status-handshake-meddelelse.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=TLS-peer benyttede en ikke understøttet hash-algoritme.
+SSL_ERROR_DIGEST_FAILURE=Digest-funktionen mislykkedes.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Forkert signatur-algoritme angivet i et digitalt signeret element.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=The next protocol negotiation extension was enabled, but the callback was cleared prior to being needed.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=Serveren understøtter ikke nogle af de protokoller, som klienten oplyser om i ALPN-udvidelsen.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Serveren afviste handshaket, fordi klienten nedgraderede til en lavere version af TLS end serveren understøtter.
 SEC_ERROR_IO=Der opstod en I/O-fejl under sikkerhedsgodkendelsen.
 SEC_ERROR_LIBRARY_FAILURE=fejl i sikkerhedsbiblioteket.
 SEC_ERROR_BAD_DATA=sikkerhedsbibliotek: modtog forkert data.
