--- a/da/toolkit/chrome/global/resetProfile.properties
+++ b/da/toolkit/chrome/global/resetProfile.properties
@@ -7,6 +7,6 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=Det ser ud som om, du ikke har brugt %S i et stykke tid. Vil du nulstille for at starte med en frisk profil? For øvrigt, velkommen tilbage!
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Nulstil %S…
-resetProfile.resetButton.accesskey=N
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Nulstil %S…
+refreshProfile.resetButton.accesskey=N
