--- a/da/mobile/android/chrome/webapp.properties
+++ b/da/mobile/android/chrome/webapp.properties
@@ -56,4 +56,4 @@ retrievalFailedTitle=#1 opdatering mislykkedes;##1 opdateringer mislykkedes
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Kunne ikke hente opdatering til %S;Kunne ikke hente opdateringer til %S
 
-webappsDisabledInGuest=Installering af apps er deaktiveret i gæstesessioner
+webappsDisabled=Installering af apps er deaktiveret
