updated latvian translation

--- a/lv/browser/chrome/browser/devtools/profiler.properties
+++ b/lv/browser/chrome/browser/devtools/profiler.properties
@@ -39,19 +39,9 @@ category.storage=Krātuve
 category.events=Ievade un notikumi
 
 graphs.fps=fps
-oRecordingsText=Neviena profila vēl nav.
 profile.tab=%1$S ms → %2$S ms
 profiler.commandkey2=VK_F5
-
-
-# LOCALIZATION NOTE (profiler.self):
-# This string is displayed as a table header in the profiler UI.
-# "Self" is how much time was spent doing work directly in that function.
-# As opposed to the total time which is how much time was spent in that
-# function and in functions it called.
-profiler.self=Pats
-
-
+noRecordingsText=Vēl nav neviena profila.
 
 # LOCALIZATION NOTE (recordingsList.itemLabel):
 # This string is displayed in the recordings list of the Profiler,
