--- a/lv/browser/chrome/browser/loop/loop.properties
+++ b/lv/browser/chrome/browser/loop/loop.properties
@@ -27,8 +27,6 @@ mute_local_video_button_title=Apklusināt video
 unmute_local_video_button_title=Pieslēgt video
 
 peer_ended_conversation=Jūsu partneris pārtrauca sarunu.
-call_has_ended=Jūsu zvans ir beidzies.
-close_window=Aizvērt šo logu
 
 cannot_start_call_session_not_ready=Nevar sākt zvanu, sesija nav gatava.
 network_disconnected=Tīkla savienojums negaidīti aizvērās.
@@ -39,3 +37,39 @@ connection_error_see_console_notification=Zvans neizdevās; papildus informācij
 legal_text_and_links=Izmantojot šo produktu, Jūs piekrītat <a \
   target="_blank" href="{{terms_of_use_url}}">lietošanas nosacījumiem</a> un <a \
   href="{{privacy_notice_url}}">privātuma atrunai</a>.
+
+add_contact_button=Pievienot kontaktu
+add_or_import_contact_title=Kontakta pievienošana vai importēšana
+audio_call_menu_button=Audio saruna
+block_contact_menu_button=Bloķēt kontaktu
+call_progress_connecting_description=Notiek savienošanās…
+call_progress_ringing_description=Zvana…
+call_timeout_notification_text=Jūsu zvans netika savienots.
+call_with_contact_title=Saruna ar {{contactName}}
+initiate_call_cancel_button=Atcelt
+
+unable_retrieve_url=Diemžēl mums neizdevās iegūt zvana adresi.
+session_expired_error_description=Sesija ir beigusies. Visas iepriekš veidotas un koplietotas adreses vairs nestrādās.
+could_not_authenticate=Nevarēja autorizēties
+password_changed_question=Vai nomainījāt paroli?
+try_again_later=Lūdzu mēģiniet vēlreiz nedaudz vēlāk
+could_not_connect=Nevarēja pieslēgties serverim
+check_internet_connection=Lūdzu pārbaudiet savu interneta savienojumu
+login_expired=Jūsu lietotājvārdam ir beidzies termiņš
+service_not_available=Pakalpojums šobrīd nav pieejams
+problem_accessing_account=Radās problēma piekļūstot jūsu kontam
+confirm_delete_contact_alert=Vai tiešām vēlaties dzēst šo kontaktu?
+confirm_delete_contact_remove_button=Aizvākt kontaktu
+confirm_delete_contact_cancel_button=Atcelt
+contact_offline_title=Šis cilvēks šobrīd nav pie interneta
+contacts_search_placesholder=Meklēt…
+conversation_has_ended=Jūsu saruna ir beigusies.
+
+share_email_subject4={{clientShortname}} — pievienojies sarunai
+share_email_body4=Sveicināti!\r\n\r\nPievienojies man uz video sarunu izmantojot {{clientShortname}}:\r\n\r\nTev neko nevajag lejupielādēt vai instalēt. Vienkārši iekopē šo adresi savā pārlūkā:\r\n\r\n{{callUrl}}\r\n\r\nJa gribi uzzināt vairāk par {{clientShortname}} skaties {{learnMoreUrl}}\r\n\r\nUz drīzu tikšanos!
+
+share_button=Epasts
+share_button2=Nosūtīt saiti
+copy_url_button=Kopēt
+copy_url_button2=Kopēt saiti
+copied_url_button=Nokopēts!
