[sy] toolkit: cycle 35

--- a/sr/toolkit/chrome/global/resetProfile.properties
+++ b/sr/toolkit/chrome/global/resetProfile.properties
@@ -7,6 +7,6 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=Изгледа да нисте покренули %S већ једно време. Да ли желите да промените за нови, као-ново искуство? И успут, добродошли назад! 
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Ресетовати %S…
-resetProfile.resetButton.accesskey=Р
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Освежи %S…
+refreshProfile.resetButton.accesskey=ж
