--- a/sr/security/manager/chrome/pipnss/nsserrors.properties
+++ b/sr/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,18 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL је примио неисправне 
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=SSL функционалност није подржана за SSL 2.0 везе.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=SSL функционалност није подржана за сервере.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=SSL функционалност није подржана за клијенте.
+SSL_ERROR_INVALID_VERSION_RANGE=SSL верзија није подржана.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=SSL корисник је одабрао cipher suite који није дозвољен у одабраној верзији протокола.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL је приммио malformed Hello Verify Request handshake поруку.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL је примио неочекивану Hello Verify Request handshake поруку.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=SSL могућност није подржана на овој верзији протокола.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL је примио неочекивану Certificate Status handshake поруку.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Неподржан hash алгоритам који користи TLS корисник.
+SSL_ERROR_DIGEST_FAILURE=Digest функција неуспела.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Неисправан алгоритам потписа који је назначен у дигитално-потписаном елементу.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Следећи протокол negotiation екстензије је омогућен, али је callback обрисан пре него што је потребан.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=Сервер не подржава протоколе које клијент рекламира у ALPN екстензији.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Сервер је одбио handshake јер се клијент деградирао на нижу TLS верзију него коју сервер подржава.
 SEC_ERROR_IO=Дошло је до У/И грешке током безбедносне ауторизације.
 SEC_ERROR_LIBRARY_FAILURE=грешка у библиотеци за безбедност.
 SEC_ERROR_BAD_DATA=библиотека за безбедност: примљени су лоши подаци.
