[sy] dom: cycle 35

--- a/sr/dom/chrome/accessibility/AccessFu.properties
+++ b/sr/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    притиснуто
 stateExpanded    =    раширен
 stateCollapsed   =    скупљено
 stateUnavailable =    недоступно
+stateReadonly    =    само читај
 stateRequired    =    обавезно
 stateTraversed   =    посећено
 stateHasPopup    =    има искачући прозор
