--- a/sr/dom/chrome/layout/css.properties
+++ b/sr/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=Очекиван идентификатор за про
 PECounterASWeight=Сваки weight у additive-symbols опису мора бити мањи него претходни weight.
 PEClassSelEOF=назив класе
 PEClassSelNotIdent=Уместо ознаке избора класе пронађено је'%1$S'.
+PECoordinatePair=Уместо пара кордината пронађено је '%1$S'.
 PETypeSelEOF=тип елемента
 PETypeSelNotType=Уместо назива елемента или '*' пронађено је '%1$S'.
 PEUnknownNamespacePrefix=Непознат префикс '%1$S'.
