--- a/sr/dom/chrome/security/security.properties
+++ b/sr/dom/chrome/security/security.properties
@@ -8,8 +8,12 @@ CrossSiteRequestBlocked=Cross-Origin захтев блокиран: Полиса
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Сајт је навео непознато Strict-Transport-Security заглавље.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders=Сајт је навео непознато Public-Key-Pins заглавље.
 InsecurePasswordsPresentOnPage=Поља за лозинке су представљена на несигурној (http://) страници. Ово је сигурносни ризик који омогућује да Ваши акредитиви буду украдени.
 InsecureFormActionPasswordsPresent=Поља за лозинке су представљена на несигурној (http://) форми. Ово је сигурносни ризик који омогућује да Ваши акредитиви буду украдени.
 InsecurePasswordsPresentOnIframe=Поља за лозинке су представљена на несигурном (http://) iframe. Ово је сигурносни ризик који омогућује да Ваши акредитиви буду украдени.
 LoadingMixedActiveContent=Учитавам помешан(несигуран) активан садржај на безбедној страници "%1$S"
 LoadingMixedDisplayContent=Учитавам помешан (несигуран) саджрај за приказ на безбедној страници "%1$S"
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=iframe који има allow-scripts и allow-same-origin за његов sandbox атрибут може да уклони његово извршавање.
