[hi-IN] update from Pootle (firefox)

--- a/hi-IN/browser/chrome/browser/syncQuota.properties
+++ b/hi-IN/browser/chrome/browser/syncQuota.properties
@@ -19,7 +19,7 @@ quota.usageNoQuota.label    = आप अभी %1$S %2$S का उपयोग 
 # of the amount of space used,
 # %3$S and %4$S numeric value and unit (as defined in the download manager)
 # of the total space available.
-quota.usagePercentage.label = आप %1$S%% (%2$S %3$S) का उपयोग कर रहे हैं अनुमतिप्राप्त %4$S %5$S में से.
+quota.usagePercentage.label = आप %1$S%% (%2$S %3$S) का उपयोग कर रहे हैं अनुमतिप्राप्त %4$S %5$S.
 quota.usageError.label      = कोटा सूचना नहीं प्राप्त कर सका.
 quota.retrieving.label      = प्राप्त कर रहा है…
 # LOCALIZATION NOTE (quota.sizeValueUnit.label): %1$S is the amount of space
