--- a/hi-IN/browser/chrome/browser/browser.properties
+++ b/hi-IN/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix='%S' दिखाएँ
 badContentBlocked.blocked.message=%S इस पृष्ठ पर कंटेंट को ब्लॉक करता है.
 badContentBlocked.notblocked.message=%S इस पृष्ठ पर किसी सामग्री को ब्लॉक नहीं करता है.
 
-# missing plugin installer
-installPlugin.message = क्या आप प्लगइन को संस्थापित करना चाहेंगे जो आपको इस पृष्ठ पर मीडिया को दिखाने के लिए चाहिए?
-installPlugin.button.label=%S संस्थापित करें (I)
-installPlugin.button.accesskey=I
-installPlugin.ignoreButton.label=दुबारा मत पूछें (n)
-installPlugin.ignoreButton.accesskey=n
-
 crashedpluginsMessage.title=%S प्लगिन क्रैश हो गया है.
 crashedpluginsMessage.reloadButton.label=पृष्ठ फिर लोड करें (R)
 crashedpluginsMessage.reloadButton.accesskey=R
@@ -562,13 +555,18 @@ getUserMedia.stopSharing.accesskey = S
 
 getUserMedia.sharingMenu.label = टैब साझा युक्ति (d)
 getUserMedia.sharingMenu.accesskey = d
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -603,3 +601,9 @@ slowStartup.disableNotificationButton.accesskey = A
 customizeTips.tip0 = %1$S: You can customize %2$S to work the way you do. Simply drag any of the above to the menu or toolbar. %3$S about customizing %2$S.
 customizeTips.tip0.hint = संकेत
 customizeTips.tip0.learnMore = और जानें
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartBrowserButton.label = %S फिर आरंभ करें
