--- a/hi-IN/browser/chrome/browser/shellservice.properties
+++ b/hi-IN/browser/chrome/browser/shellservice.properties
@@ -7,8 +7,13 @@ safeModeLabel=%S व सुरक्षित मोड
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = %S से सबसे अधिक पाएँ अपने तयशुदा ब्राउज़र के रूप में सेट करके
+setDefaultBrowserConfirm.label     = मेरे %S तयशुदा ब्राउज़र का उपयोग(U) करें
+setDefaultBrowserConfirm.accesskey = U
 setDefaultBrowserOptions.label     = विकल्प
 setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = अभी नहीं (N)
+setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = Don't ask me again
 setDefaultBrowserNever.accesskey   = D
 
