--- a/hi-IN/toolkit/chrome/global/autocomplete.properties
+++ b/hi-IN/toolkit/chrome/global/autocomplete.properties
@@ -6,4 +6,10 @@
 # the search engine provider's name. This format was chosen because
 # the provider can also end with "Search" (e.g.: MSN Search).
 searchWithEngine = %S से खोजें
+# LOCALIZATION NOTE (searchWithEngineForQuery):
+# %1$S is the search engine's name, %2$S is the search query.
+# This format was chosen because the provider can also end with "Search"
+# (e.g.: MSN Search).
 switchToTab = 'टैब में स्विच करें
+# LOCALIZATION NOTE (visitURL):
+# %S is the URL to visit.
