--- a/hi-IN/toolkit/chrome/global/resetProfile.properties
+++ b/hi-IN/toolkit/chrome/global/resetProfile.properties
@@ -7,6 +7,4 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=ऐसा लगता है कि आपने हाल में %S आरंभ नहीं किया है. क्या आप इसे ताज़ा साफ़ करना चाहते हैं, नए अनुभव की तरह? आपका स्वागत है!
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=%S फिर सेट करें…(e)
-resetProfile.resetButton.accesskey=e
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
