--- a/hi-IN/webapprt/webapprt/webapp.properties
+++ b/hi-IN/webapprt/webapprt/webapp.properties
@@ -42,7 +42,7 @@ webapps.install.install=एप्प संस्थापित करें
 webapps.install.dontinstall=मत संस्थापित करें
 # LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
 # of the webapp being uninstalled.
-webapps.uninstall.title=संस्थापित करें(%s)
+webapps.uninstall.title=संस्थापित करें %S
 # LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
 # name of the webapp being uninstalled.
 
