--- a/xh/browser/chrome/browser/devtools/webide.properties
+++ b/xh/browser/chrome/browser/devtools/webide.properties
@@ -8,6 +8,10 @@
 
 
 
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Kuyalayishwa…
+
 # These messages appear in a notification box when an error occur.
 
 
