--- a/xh/dom/chrome/dom/dom.properties
+++ b/xh/dom/chrome/dom/dom.properties
@@ -208,4 +208,4 @@ KeyNameZoomWarning=I-KeyboardEvent.key value "Zoom" ayisebenzi kwaye iza kuthiyw
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=I-KeyboardEvent.key values starting with "Dead" azisebenzi kwaye ziza kudityaniswa kwi-"Dead". Fumana olunye uncedo kwi-https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Ukuthunyelwa kweenowudi ze-XUL kuxwebhu lwesiqulatho kwaliwe. Le ndawo isenokushenxiswa kungekudala.
-XMLDocumentLoadPrincipalMismatch=Ukhuphelo lwamXwebhu asuka kwazinye iifestile aluvumelekanga. Kuphela iFestile elisuka  leyo ebelenziwe kuyo uXwebhu kivumelekile. ukwenza ukhuphelo koloXwebhu. Ngcono, sebenzisa XMLHttpRequest endaweni yoko.
+XMLDocumentLoadPrincipalMismatch=Ukhuphelo lwamaxwebhu asuka kwezinye i-Windows aluvumelekanga. Kuvumelekile ukunxibelelana kwi-Windows apho uxwebhu belenziwe khona kuphela.khuphela kolo xwebhu. Ngcono,sebenzisa i- XMLHttpRequest endaweni yoko.
