--- a/xh/browser/chrome/browser/browser.properties
+++ b/xh/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix=Bonisa i-'%S'
 badContentBlocked.blocked.message=%S ithintela uqulunqo kweliphepha
 badContentBlocked.notblocked.message=%S ayithinteli ukhululo kweliphepha
 
-# missing plugin installer
-installPlugin.message = Ingaba ungathanda ukufakela izifakelo ezifunekayo ukubonisa imifanekiso ekweli phepha?
-installPlugin.button.label=Fakela %S
-installPlugin.button.accesskey=F
-installPlugin.ignoreButton.label=Musa ukubuza kwakhona
-installPlugin.ignoreButton.accesskey=s
-
 crashedpluginsMessage.title=I-%S softiwe encedisayo yonakele.
 crashedpluginsMessage.reloadButton.label=Layisha kwakhona ikhasi
 crashedpluginsMessage.reloadButton.accesskey=L
@@ -224,10 +217,10 @@ menuRestoreAllTabs.label=Buyisela zonke iithebhu
 menuRestoreAllTabsSubview.label=Buyisela iithebhu ezivaliweyo
 # LOCALIZATION NOTE (menuRestoreAllWindows, menuUndoCloseWindowLabel, menuUndoCloseWindowSingleTabLabel):
 # see bug 394759
-menuRestoreAllWindows.label=Buyisela zonke iifestile
+menuRestoreAllWindows.label=Buyisela zonke i-Windows
 # LOCALIZATION NOTE (menuRestoreAllWindowsSubview.label): like menuRestoreAllWindows.label,
 # but used in the history subview in the panel UI, so needs to mention these are *closed* windows.
-menuRestoreAllWindowsSubview.label=Buyisela iiwindows ezivaliweyo
+menuRestoreAllWindowsSubview.label=Buyisela i-Windows ezivaliweyo
 # LOCALIZATION NOTE (menuUndoCloseWindowLabel): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 Window Title, #2 Number of tabs
@@ -562,13 +555,18 @@ getUserMedia.stopSharing.accesskey = Y
 
 getUserMedia.sharingMenu.label = Iitabhu zokwabelana needivayisi
 getUserMedia.sharingMenu.accesskey = d
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -603,3 +601,8 @@ slowStartup.disableNotificationButton.accesskey = k
 customizeTips.tip0 = %1$S: ungaqhelanisa i-%2$S ukuba isebenze ngendlela osebenza ngayo. Vela urhuqe nayiphi na kwezi zinto zingasentla kwimenyu okanye ithulbha. %3$S malunga noqhelaniso lwe-%2$S.
 customizeTips.tip0.hint = Icebiso
 customizeTips.tip0.learnMore = Funda okungakumbi
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
