--- a/xh/browser/chrome/browser/devtools/scratchpad.properties
+++ b/xh/browser/chrome/browser/devtools/scratchpad.properties
@@ -28,6 +28,9 @@ openFile.title=Vula Ifayili
 # LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
 # open fails.
 
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
+
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
 
@@ -62,6 +65,11 @@ openFile.title=Vula Ifayili
 
 # LOCALIZATION NOTE (help.openDocumentationPage): This returns a localized link with
 # documentation for Scratchpad on MDN.
+
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = Umgca %1$S, Ukrozo olwehlayo %2$S
 
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
