--- a/xh/browser/chrome/browser/sitePermissions.properties
+++ b/xh/browser/chrome/browser/sitePermissions.properties
@@ -13,7 +13,7 @@ permission.image.label = Layisha Imifanekiso
 permission.camera.label = Sebenzisa ikhamera
 permission.microphone.label = Sebenzisa imayikhrofowuni
 permission.install.label = Fakela Izongezelelo
-permission.popup.label = Vula iifestile Ezizivelelayo
+permission.popup.label = Vula ii-Pop-up Windows
 permission.geo.label = Fikelela Kwindawo Okuyo
 permission.indexedDB.label = Londoloza ugcino olungekho kwinethiwekhi
 permission.fullscreen.label = Faka isikrin esipheleleyo
