[hi-IN] update from Pootle (firefox)

--- a/hi-IN/browser/chrome/browser/devtools/webide.properties
+++ b/hi-IN/browser/chrome/browser/devtools/webide.properties
@@ -19,11 +19,8 @@ importPackagedApp_title=निर्देशिका चुनें
 importHostedApp_title=होस्ट किया गया अनुप्रयोग खोलें
 importHostedApp_header=मैनिफ़ेस्ट यूआरएल डालें
 
+notification_showTroubleShooting_label=विघ्ननिवारण
 notification_showTroubleShooting_accesskey=t
-
-# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
-# title for browser tab projects when the tab is still loading.
-project_tab_loading=लोड कर रहा है…
 
 # These messages appear in a notification box when an error occur.
 
