--- a/hi-IN/browser/chrome/browser/places/places.properties
+++ b/hi-IN/browser/chrome/browser/places/places.properties
@@ -75,16 +75,16 @@ OrganizerQueryDownloads=डाउनलोड करें
 OrganizerQueryAllBookmarks=सभी पुस्तचिह्न
 OrganizerQueryTags=टैग
 
-# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
-# keywordResultLabel, searchengineResultLabel)
+# LOCALIZATION NOTE (tagResultLabel) :
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml
+# See createResultLabel() in urlbarBindings.xml 
 tagResultLabel=टैग
+# LOCALIZATION NOTE (bookmarkResultLabel) :
+# Noun used to describe the location bar autocomplete result type
+# to users with screen readers
+# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=पुस्तचिह्न
-switchtabResultLabel=Tab
-keywordResultLabel=बीजशब्द
-
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
