[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/places/places.properties
+++ b/xh/browser/chrome/browser/places/places.properties
@@ -75,16 +75,16 @@ OrganizerQueryDownloads=Okukhutshelweyo
 OrganizerQueryAllBookmarks=Zonke iZalathisi Eziphawulayo
 OrganizerQueryTags=Iithegi
 
-# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
-# keywordResultLabel, searchengineResultLabel)
+# LOCALIZATION NOTE (tagResultLabel) :
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml
+# See createResultLabel() in urlbarBindings.xml 
 tagResultLabel=Ithegi
+# LOCALIZATION NOTE (bookmarkResultLabel) :
+# Noun used to describe the location bar autocomplete result type
+# to users with screen readers
+# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=Isalathisi esiphawulayo
-switchtabResultLabel=Ithebhu
-keywordResultLabel=Igama eliphambili
-
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
