--- a/xh/toolkit/chrome/global/resetProfile.properties
+++ b/xh/toolkit/chrome/global/resetProfile.properties
@@ -7,4 +7,6 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=Kukhangeleka ngathi akukhange uyiqalise %S kangangexesha elithile. Ingaba ufuna ukuyicoca ukuze ufumane amava afreshi namatsha? Singakhange silibale, siyakwamkela kwakhona!
 
-# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
+resetProfile.resetButton.label=Seta kwakhona %S…
+resetProfile.resetButton.accesskey=a
