--- a/xh/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/xh/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,11 +97,8 @@ quit-button.tooltiptext.linux2 = Yeka %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Yeka %1$S (%2$S)
 
-
-
 panic-button.label = Ulibele
 panic-button.tooltiptext = Ulibele imbali ethile yokubhrawuza
 
-
-# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
-# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+loop-call-button.label = Mema umntu wokuthetha
+loop-call-button.tooltiptext = Mema umntu wokuthetha
