[sy] browser: cycle 35

--- a/sr/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sr/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,19 @@ quit-button.tooltiptext.linux2 = Изађи %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Изађи %1$S (%2$S)
 
+loop-call-button2.label = Започни разговор
+loop-call-button2.tooltiptext = Започни разговор
+
+social-share-button.label = Подели ову страницу
+social-share-button.tooltiptext = Подели ову страницу
+
 panic-button.label = Заборави
 panic-button.tooltiptext = Заборави неки део историје прегледања
 
-loop-call-button.label = Позовите некога на разговор
-loop-call-button.tooltiptext = Позовите некога на разговор
+web-apps-button.label = Апликације
+web-apps-button.tooltiptext = Откриј апликације
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = WebIDE
+devtools-webide-button.tooltiptext = Open WebIDE
