--- a/sr/browser/chrome/browser/browser.properties
+++ b/sr/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix=Прикажи „%S‟
 badContentBlocked.blocked.message=%S блокира садржај на овој страници.
 badContentBlocked.notblocked.message=%S не блокира садржај на овој страници.
 
-# missing plugin installer
-installPlugin.message = Да ли желите да инсталирате овај прикључак да би се медије приказивали на овој страници?
-installPlugin.button.label=Инсталирај %S
-installPlugin.button.accesskey=И
-installPlugin.ignoreButton.label=Не питај опет
-installPlugin.ignoreButton.accesskey=Н
-
 crashedpluginsMessage.title=Прикључак %S се срушио.
 crashedpluginsMessage.reloadButton.label=Учитај поново
 crashedpluginsMessage.reloadButton.accesskey=У
@@ -562,13 +555,18 @@ getUserMedia.stopSharing.accesskey = З
 
 getUserMedia.sharingMenu.label = Језичци који деле уређаје
 getUserMedia.sharingMenu.accesskey = Ј
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -582,6 +580,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (камера и микрофон)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (камера, микрофон и апликација)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (камера, микрофон и екран)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (камера, микрофон и прозор)
+getUserMedia.sharingMenuCameraApplication = %S (камера и апликација)
+getUserMedia.sharingMenuCameraScreen = %S (камера и екран)
+getUserMedia.sharingMenuCameraWindow = %S (камера и прозор)
 getUserMedia.sharingMenuMicrophoneApplication = %S (микрофон и апликација)
 getUserMedia.sharingMenuMicrophoneScreen = %S (микрофон и екран)
 getUserMedia.sharingMenuMicrophoneWindow = %S (микрофон и прозор)
@@ -603,3 +604,12 @@ slowStartup.disableNotificationButton.accesskey = Н
 customizeTips.tip0 = %1$S: Можете прилагодити %2$S да ради на начин на који Ви то желите. Једноставно превуците било који од менија или трака са алаткама. %3$S о прилагођавању %2$S.
 customizeTips.tip0.hint = Помоћ
 customizeTips.tip0.learnMore = Сазнајте више
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = Рестартујте %S да би се надоградње примениле
+appmenu.updateFailed.description = Ажурирање у позадини није успело, молимо преузмите надоградњу
+appmenu.restartBrowserButton.label = Рестартуј %S
+appmenu.downloadUpdateButton.label = Преузми надоградњу
