--- a/sr/browser/pdfviewer/viewer.properties
+++ b/sr/browser/pdfviewer/viewer.properties
@@ -146,6 +146,7 @@ loading_error_indicator=Грешка
 loading_error=Дошло је до грешке приликом учитавања PDF-а.
 invalid_file_error=PDF датотека је оштећена или је неисправна.
 missing_file_error=PDF датотека није пронађена.
+unexpected_response_error=Неочекиван одговор од сервера.
 
 # LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
