[hi-IN] update from Pootle (mobile)

--- a/hi-IN/mobile/android/chrome/browser.properties
+++ b/hi-IN/mobile/android/chrome/browser.properties
@@ -322,6 +322,8 @@ remoteNotificationGenericName=एप्प
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=%S पोर्ट पर सुन रहा है
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
 
 # Helper apps
 helperapps.open=खोलें
@@ -366,7 +368,7 @@ readerMode.enter = रीडर विधि में दाखिल हों
 readerMode.exit = रीडर विधि से निकलें
 
 #Open in App
-openInApp.pageAction = %S एप्प में खोलें
+openInApp.pageAction = एप्प में खोलें
 openInApp.ok = ठीक
 openInApp.cancel = रद्द करें
 
