--- a/xh/mobile/android/chrome/browser.properties
+++ b/xh/mobile/android/chrome/browser.properties
@@ -322,6 +322,8 @@ remoteNotificationGenericName=I-app
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Ukumamela kumngxuma wokufaka %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
 
 # Helper apps
 helperapps.open=Vula
