updated latvian translation

--- a/lv/browser/chrome/browser/preferences/preferences.properties
+++ b/lv/browser/chrome/browser/preferences/preferences.properties
@@ -27,6 +27,7 @@ invalidURITitle=Ievadīts nederīgs resursdatora nosaukums
 actualAppCacheSize=Jūsu aplikāciju kešatmiņa šobrīd aizņem %1$S %2$S vietas uz diska
 actualDiskCacheSize=Jūsu tīmekļa satura kešatmiņa šobrīd aizņem %1$S %2$S vietas uz diska
 actualDiskCacheSizeCalculated=Aprēķina tīmekļa satura kešatmiņas izmēru…
+offlineAppsList.height=7em
 
 #### Master Password
 
