--- a/lv/webapprt/webapprt/webapp.properties
+++ b/lv/webapprt/webapprt/webapp.properties
@@ -47,3 +47,9 @@ paymentDialog.title=Maksājums
 paymentDialog.message=Kuru maksājumu sistēmu gribat izmantot?
 
 
+webapps.uninstall.title=Atinstalēt %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Vai tiešām vēlaties atinstalēt %S?
+webapps.uninstall.uninstall=Atinstalēt lietotni
+webapps.uninstall.dontuninstall=Nevajag atinstalēt
