--- a/lv/browser/chrome/browser/newTab.properties
+++ b/lv/browser/chrome/browser/newTab.properties
@@ -6,7 +6,26 @@ newtab.pin=Pielīmēt šo lapu tās pašreizējā vietā
 newtab.unpin=Atbrīvot šo lapu
 newtab.block=Aizvākt šo lapu
 
-newtab.show=Parādīt jaunas cilnes lapu
-newtab.hide=Paslēpt jaunas cilnes lapu
-newtab.sponsored=Rādīt informāciju par sponsorētajām kartītēm
-
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
+# and enhanced tiles on the same line as the tile's title, so prefer short
+# strings to avoid overlap. This string should be uppercase.
+newtab.sponsored.button=SPONSORĒTA
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.
+newtab.sponsored.explain=Šo jums rāda Mozilla partneri. Jūs jebkurā laikā varat to aizvākt klikšķinot uz %1$S pogas. %2$S
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window. %2$S will be replaced by
+# an active link using string newtab.learn.link as text.
+newtab.enhanced.explain=Mozilla partneris ir uzlabojis šo lapu, nomainot ekrānattēlu. Flīžu uzlabojumus jūs varat atslēgt klikšķinot uz %1$S pogas savos iestatījumos. %2$S
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+newtab.intro.paragraph1=Atverot jaunas cilnes lapu, jūs redzēsiet biežāk apmeklētās lapas, kā arī lapas, kas mūsuprāt varētu jums interesēt. Dažas no šīm lapām sponsorē Mozilla partneri. Mēs vienmēr norādīsim, kuras lapas tiek sponsorētas. %1$S
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
+# active link using string newtab.privacy.link as text.
+newtab.intro.paragraph2=Lai nodrošinātu šo pakalpojumu, Mozilla apkopo un izmanto statistiku, kas ir saistīta ar jūsu interneta izmantošanas ieradumiem. Viss tiek darīts atbilstoši mūsu %1$S.
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window.
+newtab.intro.paragraph3=Jūs varat atslēgt flīžu funkciju klikšķinot uz %1$S pogas iestatījumos.
+newtab.learn.link=Uzzināt vairāk…
+newtab.privacy.link=Privāruma politikai
