--- a/lv/browser/chrome/browser/quitDialog.properties
+++ b/lv/browser/chrome/browser/quitDialog.properties
@@ -10,4 +10,5 @@ saveTitle=&Saglabāt un aizvērt
 neverAsk2=&Nākamo reizi vairs nejautāt
 message=Vai %S saglabāt jūsu atvērtās cilnes un logus nākamajai palaišanas reizei?
 messageNoWindows=Vai %S saglabāt jūsu atvērtās cilnes nākamajai palaišanas reizei?
+messagePrivate=Jūs atrodaties privātajās pārlūkošanas režīmā. Aizverot %S tiks pazaudētas visas atvēŗtās cilnes un logi.
 
