--- a/lv/browser/chrome/browser/webrtcIndicator.properties
+++ b/lv/browser/chrome/browser/webrtcIndicator.properties
@@ -14,13 +14,14 @@ webrtcIndicator.sharingCamera.tooltip              = Jūsu kamera tiek koplietot
 webrtcIndicator.sharingMicrophone.tooltip          = Jūsu mikrofons tiek koplietots. Klikšķiniet, lai kontrolētu koplietošanu.
 webrtcIndicator.sharingScreen.tooltip = Jūsu ekrāns tiek koplietots. Klikšķiniet, lai kontrolētu koplietošanu.
 webrtcIndicator.sharingWindow.tooltip = Jūsu logs tiek koplietots. Klikšķiniet, lai kontrolētu koplietošanu.
-
+webrtcIndicator.sharingApplication.tooltip = Jūsu lietotne tiek koplietota. Klikšķiniet, lai kontrolētu koplietošanu.
 
 # LOCALIZATION NOTE : The following strings are only used on Mac for
 # menus attached to icons near the clock on the mac menubar.
 
 # LOCALIZATION NOTE (webrtcIndicator.sharing*With.menuitem):
 # %S is the title of the tab using the share.
+webrtcIndicator.sharingApplicationWith.menuitem = Koplieto lietotni ar "%S"
 webrtcIndicator.sharingCameraWith.menuitem = Koplieto kameru ar "%S"
 webrtcIndicator.sharingMicrophoneWith.menuitem = Koplieto mikrofonu ar "%S"
 webrtcIndicator.sharingScreenWith.menuitem = Koplieto ekrānu ar "%S"
@@ -32,6 +33,7 @@ webrtcIndicator.sharingCameraWithNTabs.menuitem = Koplieto kameru ar #1 cilnēm;
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Koplieto mikrofonu ar #1 cilnēm;Koplieto mikrofonu ar #1 cilni;Koplieto mikrofonu ar #1 cilnēm
 webrtcIndicator.sharingScreenWithNTabs.menuitem = Koplieto ekrānu ar #1 cilnēm;Koplieto ekrānu ar #1 cilni;Koplieto ekrānu ar #1 cilnēm
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Koplieto logu ar #1 cilnēm;Koplieto logu ar #1 cilni;Koplieto logu ar #1 cilnēm
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Koplieto lietotni ar #1 cilnēm;Koplieto lietotni ar #1 cilni;Koplieto lietotni ar #1 cilnēm;
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
 webrtcIndicator.controlSharingOn.menuitem = Kontrolēt koplietošanu ar "%S"
